
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int Type; } ;
typedef int BOOLEAN ;
typedef TYPE_1__ ACPI_NAMESPACE_NODE ;





 int FALSE ;
 int TRUE ;

BOOLEAN
AcpiEvIsNotifyObject (
    ACPI_NAMESPACE_NODE *Node)
{

    switch (Node->Type)
    {
    case 130:
    case 129:
    case 128:



        return (TRUE);

    default:

        return (FALSE);
    }
}
